Lambda_analyzer.output
Terminals unused in grammar

    KW_ENDCOMP
    KW_OF


Grammar

    0 $accept: input $end

    1 input: PROGRAM_START

    2 PROGRAM_START: pdeclare

    3 pdeclare: s_main_s
    4         | constant_declaration s_main_s
    5         | constant_declaration composite_declaration s_main_s
    6         | constant_declaration composite_declaration function_declaration s_main_s
    7         | constant_declaration composite_declaration function_declaration variable_declaration s_main_s

    8 s_main_s: KW_DEF KW_MAIN '(' ')' main_body KW_ENDDEF

    9 main_body: commands

   10 constant_declaration: KW_CONST TK_IDENTIFIER '=' TK_NUMBER ':' KW_INTEGER
   11                     | KW_CONST TK_IDENTIFIER '=' TK_DECIMAL ':' KW_SCALAR
   12                     | KW_CONST TK_IDENTIFIER '=' TK_STRING ':' KW_STR
   13                     | KW_CONST TK_IDENTIFIER '=' KW_TRUE ':' KW_BOOL
   14                     | KW_CONST TK_IDENTIFIER '=' KW_FALSE ':' KW_BOOL

   15 composite_declaration: KW_COMP

   16 function_declaration: KW_DEF function_header function_body KW_ENDDEF

   17 variable_declaration: TK_IDENTIFIER ':' data_type ';'
   18                     | TK_IDENTIFIER ':' data_type ',' variable_declaration

   19 data_type: basic_data_type
   20          | composite_data_type

   21 basic_data_type: KW_INTEGER
   22                | KW_BOOL
   23                | KW_SCALAR
   24                | KW_STR

   25 composite_data_type: KW_COMP TK_IDENTIFIER

   26 expression: TK_NUMBER
   27           | TK_REAL
   28           | TK_CHAR
   29           | TK_STRING
   30           | TK_DIGIT
   31           | TK_DECIMAL
   32           | TK_IDENTIFIER
   33           | TK_IDENTIFIER '(' function_arg ')'
   34           | TK_IDENTIFIER '(' ')'
   35           | TK_IDENTIFIER brackets
   36           | KW_TRUE
   37           | KW_FALSE
   38           | '(' expression ')'
   39           | composite_data_type '.' expression
   40           | math_expression
   41           | logical_expression
   42           | '+' expression
   43           | '-' expression

   44 math_expression: expression POW expression
   45                | expression '+' expression
   46                | expression '-' expression
   47                | expression '*' expression
   48                | expression '/' expression
   49                | expression MOD expression
   50                | expression KW_MOD expression

   51 logical_expression: expression EQ expression
   52                   | expression LEQ expression
   53                   | expression GEQ expression
   54                   | expression NEQ expression
   55                   | expression '<' expression
   56                   | expression '>' expression
   57                   | expression LAND expression
   58                   | expression KW_AND expression
   59                   | expression LOR expression
   60                   | expression KW_OR expression
   61                   | '!' expression
   62                   | KW_NOT expression

   63 brackets: '[' expression ']'
   64         | brackets '[' expression ']'

   65 commands: command commands
   66         | command

   67 command: ';'
   68        | variable_assignement
   69        | TK_IDENTIFIER brackets '=' expression ';'
   70        | if_statement ';'
   71        | for_statement ';'
   72        | compound_array_i ';'
   73        | compound_array_a ';'
   74        | while_statement ';'
   75        | KW_BREAK ';'
   76        | KW_CONTINUE ';'
   77        | KW_RETURN ';'
   78        | KW_RETURN expression ';'
   79        | TK_IDENTIFIER '(' function_arg ')' ';'
   80        | TK_IDENTIFIER '(' ')' ';'
   81        | TK_IDENTIFIER ADD_ASSIGN TK_IDENTIFIER ';'
   82        | TK_IDENTIFIER SUB_ASSIGN TK_IDENTIFIER ';'
   83        | TK_IDENTIFIER MULT_ASSIGN TK_IDENTIFIER ';'
   84        | TK_IDENTIFIER DIV_ASSIGN TK_IDENTIFIER ';'
   85        | TK_IDENTIFIER MOD_ASSIGN TK_IDENTIFIER ';'

   86 variable_assignement: TK_IDENTIFIER '=' expression ';'

   87 if_statement: KW_IF '(' logical_expression ')' ':' commands KW_ENDIF
   88             | KW_IF '(' logical_expression ')' ':' commands KW_ELSE ':' commands KW_ENDIF

   89 for_statement: KW_FOR TK_IDENTIFIER KW_IN '[' TK_NUMBER ':' TK_NUMBER ']' commands KW_ENDFOR
   90              | KW_FOR TK_IDENTIFIER KW_IN '[' TK_NUMBER ':' TK_NUMBER ':' TK_NUMBER ']' commands KW_ENDFOR

   91 compound_array_a: TK_IDENTIFIER ASSIGN '[' ']'

   92 compound_array_i: TK_IDENTIFIER ASSIGN '[' expression KW_FOR TK_IDENTIFIER ':' TK_NUMBER ']' ':' data_type

   93 while_statement: KW_WHILE '(' logical_expression ')' commands KW_ENDWHILE

   94 function_arg: expression
   95             | function_arg ',' expression

   96 function_header: TK_IDENTIFIER '(' function_arg ')' '-' '>' data_type

   97 function_body: commands


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 61
    '(' (40) 8 33 34 38 79 80 87 88 93 96
    ')' (41) 8 33 34 38 79 80 87 88 93 96
    '*' (42) 47
    '+' (43) 42 45
    ',' (44) 18 95
    '-' (45) 43 46 96
    '.' (46) 39
    '/' (47) 48
    ':' (58) 10 11 12 13 14 17 18 87 88 89 90 92
    ';' (59) 17 67 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
    '<' (60) 55
    '=' (61) 10 11 12 13 14 69 86
    '>' (62) 56 96
    '[' (91) 63 64 89 90 91 92
    ']' (93) 63 64 89 90 91 92
    error (256)
    TK_IDENTIFIER <strng> (258) 10 11 12 13 14 17 18 25 32 33 34 35 69 79 80 81 82 83 84 85 86 89 90 91 92 96
    TK_CHAR <strng> (259) 28
    TK_STRING <strng> (260) 12 29
    TK_REAL <strng> (261) 27
    TK_DIGIT <strng> (262) 30
    TK_NUMBER <strng> (263) 10 26 89 90 92
    TK_DECIMAL <strng> (264) 11 31
    KW_MAIN (265) 8
    KW_INTEGER <strng> (266) 10 21
    KW_SCALAR <strng> (267) 11 23
    KW_STR <strng> (268) 12 24
    KW_BOOL <strng> (269) 13 14 22
    KW_TRUE <strng> (270) 13 36
    KW_FALSE <strng> (271) 14 37
    KW_CONST (272) 10 11 12 13 14
    KW_IF (273) 87 88
    KW_ELSE (274) 88
    KW_ENDIF (275) 87 88
    KW_FOR (276) 89 90 92
    KW_IN (277) 89 90
    KW_ENDFOR (278) 89 90
    KW_WHILE (279) 93
    KW_ENDWHILE (280) 93
    KW_BREAK (281) 75
    KW_RETURN (282) 77 78
    KW_CONTINUE (283) 76
    KW_AND (284) 58
    KW_OR (285) 60
    KW_COMP (286) 15 25
    KW_ENDCOMP (287)
    KW_OF (288)
    KW_DEF (289) 8 16
    KW_ENDDEF (290) 8 16
    ADD_ASSIGN (291) 81
    SUB_ASSIGN (292) 82
    MULT_ASSIGN (293) 83
    DIV_ASSIGN (294) 84
    MOD_ASSIGN (295) 85
    ASSIGN (296) 91 92
    LOR (297) 59
    LAND (298) 57
    KW_NOT (299) 62
    NEQ (300) 54
    EQ (301) 51
    LEQ (302) 52
    GEQ (303) 53
    MOD (304) 49
    KW_MOD (305) 50
    POW (306) 44


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    input (69)
        on left: 1
        on right: 0
    PROGRAM_START <strng> (70)
        on left: 2
        on right: 1
    pdeclare <strng> (71)
        on left: 3 4 5 6 7
        on right: 2
    s_main_s <strng> (72)
        on left: 8
        on right: 3 4 5 6 7
    main_body <strng> (73)
        on left: 9
        on right: 8
    constant_declaration <strng> (74)
        on left: 10 11 12 13 14
        on right: 4 5 6 7
    composite_declaration <strng> (75)
        on left: 15
        on right: 5 6 7
    function_declaration <strng> (76)
        on left: 16
        on right: 6 7
    variable_declaration <strng> (77)
        on left: 17 18
        on right: 7 18
    data_type <strng> (78)
        on left: 19 20
        on right: 17 18 92 96
    basic_data_type <strng> (79)
        on left: 21 22 23 24
        on right: 19
    composite_data_type <strng> (80)
        on left: 25
        on right: 20 39
    expression <strng> (81)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 38 39 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 69 78 86 92 94 95
    math_expression <strng> (82)
        on left: 44 45 46 47 48 49 50
        on right: 40
    logical_expression <strng> (83)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 41 87 88 93
    brackets <strng> (84)
        on left: 63 64
        on right: 35 64 69
    commands <strng> (85)
        on left: 65 66
        on right: 9 65 87 88 89 90 93 97
    command <strng> (86)
        on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 65 66
    variable_assignement <strng> (87)
        on left: 86
        on right: 68
    if_statement <strng> (88)
        on left: 87 88
        on right: 70
    for_statement <strng> (89)
        on left: 89 90
        on right: 71
    compound_array_a <strng> (90)
        on left: 91
        on right: 73
    compound_array_i <strng> (91)
        on left: 92
        on right: 72
    while_statement <strng> (92)
        on left: 93
        on right: 74
    function_arg <strng> (93)
        on left: 94 95
        on right: 33 79 95 96
    function_header <strng> (94)
        on left: 96
        on right: 16
    function_body <strng> (95)
        on left: 97
        on right: 16


State 0

    0 $accept: • input $end
    1 input: • PROGRAM_START
    2 PROGRAM_START: • pdeclare
    3 pdeclare: • s_main_s
    4         | • constant_declaration s_main_s
    5         | • constant_declaration composite_declaration s_main_s
    6         | • constant_declaration composite_declaration function_declaration s_main_s
    7         | • constant_declaration composite_declaration function_declaration variable_declaration s_main_s
    8 s_main_s: • KW_DEF KW_MAIN '(' ')' main_body KW_ENDDEF
   10 constant_declaration: • KW_CONST TK_IDENTIFIER '=' TK_NUMBER ':' KW_INTEGER
   11                     | • KW_CONST TK_IDENTIFIER '=' TK_DECIMAL ':' KW_SCALAR
   12                     | • KW_CONST TK_IDENTIFIER '=' TK_STRING ':' KW_STR
   13                     | • KW_CONST TK_IDENTIFIER '=' KW_TRUE ':' KW_BOOL
   14                     | • KW_CONST TK_IDENTIFIER '=' KW_FALSE ':' KW_BOOL

    KW_CONST  shift, and go to state 1
    KW_DEF    shift, and go to state 2

    input                 go to state 3
    PROGRAM_START         go to state 4
    pdeclare              go to state 5
    s_main_s              go to state 6
    constant_declaration  go to state 7


State 1

   10 constant_declaration: KW_CONST • TK_IDENTIFIER '=' TK_NUMBER ':' KW_INTEGER
   11                     | KW_CONST • TK_IDENTIFIER '=' TK_DECIMAL ':' KW_SCALAR
   12                     | KW_CONST • TK_IDENTIFIER '=' TK_STRING ':' KW_STR
   13                     | KW_CONST • TK_IDENTIFIER '=' KW_TRUE ':' KW_BOOL
   14                     | KW_CONST • TK_IDENTIFIER '=' KW_FALSE ':' KW_BOOL

    TK_IDENTIFIER  shift, and go to state 8


State 2

    8 s_main_s: KW_DEF • KW_MAIN '(' ')' main_body KW_ENDDEF

    KW_MAIN  shift, and go to state 9


State 3

    0 $accept: input • $end

    $end  shift, and go to state 10


State 4

    1 input: PROGRAM_START •

    $default  reduce using rule 1 (input)


State 5

    2 PROGRAM_START: pdeclare •

    $default  reduce using rule 2 (PROGRAM_START)


State 6

    3 pdeclare: s_main_s •

    $default  reduce using rule 3 (pdeclare)


State 7

    4 pdeclare: constant_declaration • s_main_s
    5         | constant_declaration • composite_declaration s_main_s
    6         | constant_declaration • composite_declaration function_declaration s_main_s
    7         | constant_declaration • composite_declaration function_declaration variable_declaration s_main_s
    8 s_main_s: • KW_DEF KW_MAIN '(' ')' main_body KW_ENDDEF
   15 composite_declaration: • KW_COMP

    KW_COMP  shift, and go to state 11
    KW_DEF   shift, and go to state 2

    s_main_s               go to state 12
    composite_declaration  go to state 13


State 8

   10 constant_declaration: KW_CONST TK_IDENTIFIER • '=' TK_NUMBER ':' KW_INTEGER
   11                     | KW_CONST TK_IDENTIFIER • '=' TK_DECIMAL ':' KW_SCALAR
   12                     | KW_CONST TK_IDENTIFIER • '=' TK_STRING ':' KW_STR
   13                     | KW_CONST TK_IDENTIFIER • '=' KW_TRUE ':' KW_BOOL
   14                     | KW_CONST TK_IDENTIFIER • '=' KW_FALSE ':' KW_BOOL

    '='  shift, and go to state 14


State 9

    8 s_main_s: KW_DEF KW_MAIN • '(' ')' main_body KW_ENDDEF

    '('  shift, and go to state 15


State 10

    0 $accept: input $end •

    $default  accept


State 11

   15 composite_declaration: KW_COMP •

    $default  reduce using rule 15 (composite_declaration)


State 12

    4 pdeclare: constant_declaration s_main_s •

    $default  reduce using rule 4 (pdeclare)


State 13

    5 pdeclare: constant_declaration composite_declaration • s_main_s
    6         | constant_declaration composite_declaration • function_declaration s_main_s
    7         | constant_declaration composite_declaration • function_declaration variable_declaration s_main_s
    8 s_main_s: • KW_DEF KW_MAIN '(' ')' main_body KW_ENDDEF
   16 function_declaration: • KW_DEF function_header function_body KW_ENDDEF

    KW_DEF  shift, and go to state 16

    s_main_s              go to state 17
    function_declaration  go to state 18


State 14

   10 constant_declaration: KW_CONST TK_IDENTIFIER '=' • TK_NUMBER ':' KW_INTEGER
   11                     | KW_CONST TK_IDENTIFIER '=' • TK_DECIMAL ':' KW_SCALAR
   12                     | KW_CONST TK_IDENTIFIER '=' • TK_STRING ':' KW_STR
   13                     | KW_CONST TK_IDENTIFIER '=' • KW_TRUE ':' KW_BOOL
   14                     | KW_CONST TK_IDENTIFIER '=' • KW_FALSE ':' KW_BOOL

    TK_STRING   shift, and go to state 19
    TK_NUMBER   shift, and go to state 20
    TK_DECIMAL  shift, and go to state 21
    KW_TRUE     shift, and go to state 22
    KW_FALSE    shift, and go to state 23


State 15

    8 s_main_s: KW_DEF KW_MAIN '(' • ')' main_body KW_ENDDEF

    ')'  shift, and go to state 24


State 16

    8 s_main_s: KW_DEF • KW_MAIN '(' ')' main_body KW_ENDDEF
   16 function_declaration: KW_DEF • function_header function_body KW_ENDDEF
   96 function_header: • TK_IDENTIFIER '(' function_arg ')' '-' '>' data_type

    TK_IDENTIFIER  shift, and go to state 25
    KW_MAIN        shift, and go to state 9

    function_header  go to state 26


State 17

    5 pdeclare: constant_declaration composite_declaration s_main_s •

    $default  reduce using rule 5 (pdeclare)


State 18

    6 pdeclare: constant_declaration composite_declaration function_declaration • s_main_s
    7         | constant_declaration composite_declaration function_declaration • variable_declaration s_main_s
    8 s_main_s: • KW_DEF KW_MAIN '(' ')' main_body KW_ENDDEF
   17 variable_declaration: • TK_IDENTIFIER ':' data_type ';'
   18                     | • TK_IDENTIFIER ':' data_type ',' variable_declaration

    TK_IDENTIFIER  shift, and go to state 27
    KW_DEF         shift, and go to state 2

    s_main_s              go to state 28
    variable_declaration  go to state 29


State 19

   12 constant_declaration: KW_CONST TK_IDENTIFIER '=' TK_STRING • ':' KW_STR

    ':'  shift, and go to state 30


State 20

   10 constant_declaration: KW_CONST TK_IDENTIFIER '=' TK_NUMBER • ':' KW_INTEGER

    ':'  shift, and go to state 31


State 21

   11 constant_declaration: KW_CONST TK_IDENTIFIER '=' TK_DECIMAL • ':' KW_SCALAR

    ':'  shift, and go to state 32


State 22

   13 constant_declaration: KW_CONST TK_IDENTIFIER '=' KW_TRUE • ':' KW_BOOL

    ':'  shift, and go to state 33


State 23

   14 constant_declaration: KW_CONST TK_IDENTIFIER '=' KW_FALSE • ':' KW_BOOL

    ':'  shift, and go to state 34


State 24

    8 s_main_s: KW_DEF KW_MAIN '(' ')' • main_body KW_ENDDEF
    9 main_body: • commands
   65 commands: • command commands
   66         | • command
   67 command: • ';'
   68        | • variable_assignement
   69        | • TK_IDENTIFIER brackets '=' expression ';'
   70        | • if_statement ';'
   71        | • for_statement ';'
   72        | • compound_array_i ';'
   73        | • compound_array_a ';'
   74        | • while_statement ';'
   75        | • KW_BREAK ';'
   76        | • KW_CONTINUE ';'
   77        | • KW_RETURN ';'
   78        | • KW_RETURN expression ';'
   79        | • TK_IDENTIFIER '(' function_arg ')' ';'
   80        | • TK_IDENTIFIER '(' ')' ';'
   81        | • TK_IDENTIFIER ADD_ASSIGN TK_IDENTIFIER ';'
   82        | • TK_IDENTIFIER SUB_ASSIGN TK_IDENTIFIER ';'
   83        | • TK_IDENTIFIER MULT_ASSIGN TK_IDENTIFIER ';'
   84        | • TK_IDENTIFIER DIV_ASSIGN TK_IDENTIFIER ';'
   85        | • TK_IDENTIFIER MOD_ASSIGN TK_IDENTIFIER ';'
   86 variable_assignement: • TK_IDENTIFIER '=' expression ';'
   87 if_statement: • KW_IF '(' logical_expression ')' ':' commands KW_ENDIF
   88             | • KW_IF '(' logical_expression ')' ':' commands KW_ELSE ':' commands KW_ENDIF
   89 for_statement: • KW_FOR TK_IDENTIFIER KW_IN '[' TK_NUMBER ':' TK_NUMBER ']' commands KW_ENDFOR
   90              | • KW_FOR TK_IDENTIFIER KW_IN '[' TK_NUMBER ':' TK_NUMBER ':' TK_NUMBER ']' commands KW_ENDFOR
   91 compound_array_a: • TK_IDENTIFIER ASSIGN '[' ']'
   92 compound_array_i: • TK_IDENTIFIER ASSIGN '[' expression KW_FOR TK_IDENTIFIER ':' TK_NUMBER ']' ':' data_type
   93 while_statement: • KW_WHILE '(' logical_expression ')' commands KW_ENDWHILE

    TK_IDENTIFIER  shift, and go to state 35
    KW_IF          shift, and go to state 36
    KW_FOR         shift, and go to state 37
    KW_WHILE       shift, and go to state 38
    KW_BREAK       shift, and go to state 39
    KW_RETURN      shift, and go to state 40
    KW_CONTINUE    shift, and go to state 41
    ';'            shift, and go to state 42

    main_body             go to state 43
    commands              go to state 44
    command               go to state 45
    variable_assignement  go to state 46
    if_statement          go to state 47
    for_statement         go to state 48
    compound_array_a      go to state 49
    compound_array_i      go to state 50
    while_statement       go to state 51


State 25

   96 function_header: TK_IDENTIFIER • '(' function_arg ')' '-' '>' data_type

    '('  shift, and go to state 52


State 26
